app/javascript/styles/_explore.scss
.study-explore {
	position: relative;
	.gene-load-spinner {
    position: absolute;
    top: 40%;
    left: 50%;
    color: #999;
    font-size: 2.5em;
  }
  a {
  	cursor: pointer;
	}

	button.action {
		border: none;
	}

	.plot {
		position: relative;
		background: #fff;
		min-height: 300px;
		.help-block {
			margin-left: 1em;
		}
	}
	.plot-title {
		margin-left: 1em;
		margin-top: 0.5em;
	}
	.legendtitletext {
	}
}

.explore-plot-tab-content {
	min-height: 50vh;
}

.create-annotation-control {
	label {
		font-weight: normal;
	}
	input[type="text"] {
		margin-bottom: 0.5em;
		width: 100%;
	}
	.delete-icon {
		border: none;
		color: #777;
		background: none;
		max-height: 1.8em;
		border-radius: 1em;
		&:hover {
			background: #eef;
		}
	}
	ul {
		padding-inline-start: 10px;
	}
	.gene-load-spinner {
		position: relative;
	}
}


.explore-plot-tab-content {
	background: #fff;
}

.view-options-toggle {
	border: none;
	background: none;
	font-weight: bold;
	position: absolute;
	top: 10px;
	right: 2em;
}


.study-explore .view-options {
  // leave room for the 'view options' toggle
	margin-top: 3em;
}

.render-controls {
	.panel {
		border: none;
		border-radius: 5px;
		background: #fff;
		box-shadow: none;
		margin-bottom: 10px;
	}
	.panel-heading {
	  cursor: pointer;
		background: #ddd;
		border-radius: 5px;
		padding: 5px 15px;
	}
}

.react-switch {
  vertical-align: middle;
  margin-left: 4px;
}

